--- a/styles/header.css
+++ b/styles/header.css
@@ -1,20 +1,24 @@
 * {
+    position: relative;
     box-sizing: border-box;
 }
 
 header {
+    z-index: 2;
     height: 60px;
     padding: 10px;
     display: flex;
     align-items: center;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
 }
 
 .shadow {
     border-bottom: 1px;
     border-bottom-style: solid;
-    border-color: #e4dfdf;
+    border-color: #d3c8c8;
     height: 2px;
-    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
+    z-index: 45;
 }
 
 .logo {
@@ -138,7 +142,7 @@ header {
 }
 
 .dropdown-content {
-    /* display: none; */
+    display: none; 
     margin: 2px;
     border-radius: 5px;
     position: absolute;
